<resources>
    <string name="app_name">WhatsApp Copy</string>

    <!-- Navigation Drawer Strings -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="chats_text">Chats</string>
    <string name="calls_text">Calls</string>
    <string name="status_text">Status</string>
    <string name="groups_text">Groups</string>

    <string name="search">Search</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="whatsapp_web">WhatsApp Web</string>
    <string name="starred_msgs">Starred messages</string>
    <string name="menu_settings">Settings</string>
</resources>
