<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/new_group"
        android:title="@string/new_group" />

    <item
        android:id="@+id/new_brdcst"
        android:title="@string/new_broadcast"/>

    <item
        android:id="@+id/w_web"
        android:title="@string/whatsapp_web"/>

    <item
        android:id="@+id/starred_msgs"
        android:title="@string/starred_msgs"/>

    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"/>

</menu>